fix: future message unmodifiable list