@@ -9,11 +9,12 @@ import org.bukkit.entity.Player;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class FutureMessage {
 
     public static FutureMessage create(List<Component> messages, boolean centered) {
-        return new FutureMessage(messages.stream().map(component -> MiniMessage.miniMessage().serialize(component)).toList(), centered);
+        return new FutureMessage(messages.stream().map(component -> MiniMessage.miniMessage().serialize(component)).collect(Collectors.toList()), centered);
     }
 
     private List<String> messages;
